# HW_1_2

./: CMakeLists.txt  README.md  example_test.cpp  sorts.cpp
mybuild/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  example_tests  example_tests[1]_include.cmake  example_tests[1]_tests.cmake
mybuild/Testing/Temporary/: CTestCostData.txt
sortings/: CMakeLists.txt  sorts.h
